# PDS-Laboratorio-M1

./: .gitignore  CMakeLists.txt  README.md
FileWatcherProva/: FileWatcher.cpp  FileWatcher.h  README.md  main  main.cpp
client/: CMakeLists.txt  Client.cpp  Client.h  FileWatcher.cpp  FileWatcher.h  main.cpp
prova/: CMakeCache.txt  Connection.txt
server/: .gitignore  AuthManager.cpp  AuthManager.h  CMakeLists.txt  Connection.cpp  Connection.h  Folder.cpp  Folder.h  Server.cpp  Server.h  ServerSocket.cpp  ServerSocket.h  main.cpp  users.db
shared/: CMakeLists.txt  Checksum.cpp  Checksum.h  Folder.cpp  Folder.h  SimpleCrypt.cpp  SimpleCrypt.h  Socket.cpp  Socket.h
shared/communication/: Exchanger.cpp  Exchanger.h  FileWrapper.cpp  FileWrapper.h  Message.h
shared/packets/: FileStatus.h  FileWrapper.cpp  FileWrapper.h  Message.cpp  Message.h  Serializable.h  main  main.cpp
